bynkc/tests/fixtures/negative/312_http_limit_duplicate/src/api.bynk
context api

service api from http {
  @limit(maxBody: 100)
  @limit(maxBody: 200)
  on POST("/upload") (body: String) -> Effect[HttpResult[String]] by v: Visitor {
    Created(body)
  }
}
